Added basic Cypress setup.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/canada-ca/ore-ero#readme",
   "devDependencies": {
+    "cypress": "^3.4.1",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.0.1",
     "prettier": "^1.17.0"
