--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ script:
 - yamale -s schemaCode.yaml _data/code
 - yamale -s schemaAdmin.yaml _data/administrations
 - yamale -s schemaSoftware.yaml _data/software
+- yamale -s schemaStandard.yaml _data/standard
 - npm run lint
 - yamllint -d configYamlLint.yml _data
 
