--- a/_data/standard/utf-8.yml
+++ b/_data/standard/utf-8.yml
@@ -30,7 +30,7 @@ tags:
 administrations:
   - adminCode: tbs-sct
     contact:
-      email: null
+      email: sebastien.lemay@tbs-sct.gc.ca
     date:
       created: '2018-01-23'
       metadataLastUpdated: '2018-11-15'
@@ -44,16 +44,21 @@ administrations:
     status: mandatory
   - adminCode: lac-bac
     contact:
-      email: null
+      email: sebastien.lemay@tbs-sct.gc.ca
     date:
       created: '2018-01-23'
       metadataLastUpdated: '2018-11-15'
     references:
       - URL:
           en: >-
-            http://www.lac-bac.gc.ca/eng/services/government-information-resources/guidelines/Pages/guidelines-file-formats-transferring-information-resources-enduring-value.aspx
+            http://www.lac-bac.gc.ca/eng/services/government-information
+            -resources/guidelines/Pages/guidelines-file-formats-transferring
+            -information-resources-enduring-value.aspx
           fr: >-
-            http://www.lac-bac.gc.ca/fra/services/gestion-ressources-documentaires-gouvernement/lignes-directrices/Pages/lignes-directrices-formats-fichier-transferers-ressources-documentaires.aspx
+            http://www.lac-bac.gc.ca/fra/services/gestion-ressources
+            -documentaires-gouvernement/lignes-directrices/Pages/lignes
+            -directrices-formats-fichier-transferers-ressources-documentaires.
+            aspx
         name:
           en: >-
             Guidelines on File Formats for Transferring Information Resources of
