--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ jdk:
 install:
 - bundle install
 - pip install --user html5validator
-- pip install --user yamale
+- pip install --user yamale==1.10.1
 - npm install
 - pip install --user yamllint
 
