--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -6,7 +6,7 @@ releases:
       email: apogy-dev@eclipse.org
     date:
       created: '2015-09-28'
-      metadataLastUpdated: '2019-01-31'
+      metadataLastUpdated: '2019-08-20'
     description:
       whatItDoes:
         en: 'The one-stop-shop solution for operating robots, satellites and beyond'
@@ -34,3 +34,14 @@ releases:
         - Espace
     languages:
       - Java
+    partners:
+      - adminCode: fred1-mb
+        email: frederic.lestage@montreal.ca
+        name: Frédéric Lestage UN
+      - !<tag:yaml.org,2002:js/undefined> ''
+      - adminCode: fred2-on
+        email: frederic.lestage@montreal.ca
+        name: Frédéric Lestage TROIS
+      - adminCode: fred3-pe
+        email: frederic.lestage@montreal.ca
+        name: Frédéric Lestage QUATRE
