--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -34,3 +34,40 @@ releases:
         - Espace
     languages:
       - Java
+  - contact:
+      email: frederic.lestage@montreal.ca
+    date:
+      created: '2019-08-08'
+      metadataLastUpdated: '2019-08-20'
+    description:
+      whatItDoes:
+        en: What it does EN
+        fr: What it does FR
+    category: '43232500'
+    name:
+      en: Frederic
+      fr: Frédéric
+    licences:
+      - URL:
+          en: 'http://www.google.com'
+          fr: 'http://www.google.ca'
+        spdxID: AFL-1.2
+    repositoryURL:
+      en: 'http://www.google.com/repository'
+      fr: 'http://www.google.ca/repertoire'
+    tags:
+      en:
+        - TagEN
+      fr:
+        - TagFR
+    partners:
+      - adminCode: fred1-nb
+        email: frederic.lestage@montreal.ca
+        name: Frédéric Lestage
+      - !<tag:yaml.org,2002:js/undefined> ''
+      - adminCode: fred2-nl
+        email: frederic.lestage@montreal.ca
+        name: Frédéric Lestage TROIS
+      - adminCode: fred3-nl
+        email: frederic.lestage@montreal.ca
+        name: Frédéric Lestage QUATRE
