--- a/_data/administrations/aboriginal.yml
+++ b/_data/administrations/aboriginal.yml
@@ -3,3 +3,8 @@
   name:
     en: Test (please remove)
     fr: Test (please remove)
+- code: partner-bc
+  name:
+    en: partner
+    fr: partenaire
+  provinceCode: bc
