--- a/_data/administrations/aboriginal.yml
+++ b/_data/administrations/aboriginal.yml
@@ -3,3 +3,8 @@
   name:
     en: Test (please remove)
     fr: Test (please remove)
+- code: fred2-pe
+  name:
+    en: fred2
+    fr: fred2
+  provinceCode: pe
