--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -34,3 +34,42 @@ releases:
         - Espace
     languages:
       - Java
+  - contact:
+      email: frederic.lestage@montreal.ca
+    date:
+      created: '2019-08-09'
+      metadataLastUpdated: '2019-08-21'
+    description:
+      whatItDoes:
+        en: What it does EN
+        fr: What it does FR
+    category: '43232100'
+    name:
+      en: Frederic
+      fr: Frédéric
+    licences:
+      - URL:
+          en: 'http://www.google.com'
+          fr: 'http://www.google.ca'
+        spdxID: AGPL-3.0-or-later
+    repositoryURL:
+      en: 'http://www.google.com/repository'
+      fr: 'http://www.google.ca/repertoire'
+    tags:
+      en:
+        - TagEN
+      fr:
+        - TagFR
+    partners:
+      - adminCode: fred1-mb
+        email: frederic.lestage@montreal.ca
+        name: Frédéric Lestage
+      - adminCode: cbsa-asfc
+        email: frederic.lestage@montreal.ca
+        name: Frédéric Lestage DEUX
+      - adminCode: fred2-pe
+        email: frederic.lestage@montreal.ca
+        name: Frédéric Lestage TROIS
+      - adminCode: fred3-on
+        email: frederic.lestage@montreal.ca
+        name: Frédéric Lestage QUATRE
