Updated texts for dates

--- a/_data/forms/config-code.yml
+++ b/_data/forms/config-code.yml
@@ -24,8 +24,9 @@ formGroups:
       - widget: string
         title: email
         param: {type: email, required: false}
-  - preset: dates
-    param: {created: true}
+  - widget: string
+    title: date
+    param: {type: date, rule: dateISO}
   - widget: string-i18n
     title: repositoryUrl
     param: {type: url}
