--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -4,15 +4,17 @@ adminCode: asc-csa
 releases:
   - contact:
       email: apogy-dev@eclipse.org
+      name: contact
     date:
       created: '2015-09-28'
-      metadataLastUpdated: '2019-01-31'
+      metadataLastUpdated: '2019-08-23'
     description:
       whatItDoes:
-        en: 'The one-stop-shop solution for operating robots, satellites and beyond'
-        fr: >-
-          Un logiciel polyvalent pour faire fonctionner des robots et des
-          satellites
+        en: What it does new NE
+        fr: What it does new FR
+      howItWorks:
+        en: How it workd new EN
+        fr: How it works new FR
     category: '43232600'
     name:
       en: Apogy
@@ -28,9 +30,15 @@ releases:
     tags:
       en:
         - Robots
-        - Space
+        - new tag EN
       fr:
         - Robots
         - Espace
+        - new tag FR
     languages:
       - Java
+    partners:
+      - adminCode: fred-nl
+        email: frederic.lestage@montreal.ca
+        name: Frédéric Lestage
+    status: Maintained
