--- a/_data/standard/html5.yml
+++ b/_data/standard/html5.yml
@@ -4,14 +4,17 @@ description:
   whatItDoes:
     en: >-
       HTML5 is a markup language used for structuring and presenting content on
-      the Web. It is the fifth and current major version of the HTML standard.
+      the Web. It is the fifth and curent major version of the HTML standard.
     fr: >-
       HTML5 est un langage de balisage utilisé pour structurer et présenter du
       contenu sur le Web. C'est la cinquième et dernière version majeure de la
       norme HTML.
+  howItWorks:
+    en: How it works
+    fr: How it works
 name:
-  en: HyperText Markup Language 5
-  fr: HyperText Markup Language 5
+  en: HyperText Markup Language five
+  fr: HyperText Markup Language five
 specURL:
   en: 'https://www.w3.org/TR/html5/'
   fr: 'https://www.w3.org/TR/html5/'
@@ -22,15 +25,17 @@ standardOrg:
 tags:
   en:
     - Web
+    - new tag EN
   fr:
     - Web
+    - new tag FR
 administrations:
   - adminCode: tbs-sct
     contact:
       email: sebastien.lemay@tbs-sct.gc.ca
     date:
       created: '2018-01-23'
-      metadataLastUpdated: '2018-11-15'
+      metadataLastUpdated: '2019-08-23'
     references:
       - URL:
           en: 'https://www.tbs-sct.gc.ca/pol/doc-eng.aspx?id=25875'
