--- a/_data/software/notepad-plus-plus.yml
+++ b/_data/software/notepad-plus-plus.yml
@@ -16,8 +16,8 @@ licences:
       fr: 'https://notepad-plus-plus.org/news/notepad-6.1.1-gpl-enhancement.html'
     spdxID: GPL-2.0-only
 name:
-  en: Notepad-plus-plus
-  fr: Notepad-plus-plus
+  en: Notepad++
+  fr: Notepad++
 tags:
   en:
     - Desktop
