--- a/_data/code/federal/esdc-edsc.yml
+++ b/_data/code/federal/esdc-edsc.yml
@@ -58,3 +58,31 @@ releases:
         - Demo
       fr:
         - Demo
+  - contact:
+      email: calvin.rodo@hrsdc-rhdcc.gc.ca
+    date:
+      created: '2019-02-13'
+      metadataLastUpdated: '2019-08-27'
+    description:
+      whatItDoes:
+        en: A dashboard to show expose metrics on software projects at ESDC
+        fr: >-
+          Un tableau de bord pour afficher les métriques d'exposition sur les
+          projets logiciels d'EDSC
+    category: '43232400'
+    name:
+      en: App-test-Hub
+      fr: Hub-test-App
+    licences:
+      - URL:
+          en: 'https://github.com/esdc-devx/AppHub/blob/master/LICENSE'
+          fr: 'https://github.com/esdc-devx/AppHub/blob/master/LICENSE'
+        spdxID: MIT
+    repositoryURL:
+      en: 'https://github.com/esdc-devx/AppHub'
+      fr: 'https://github.com/esdc-devx/AppHub'
+    tags:
+      en:
+        - Dashboard
+      fr:
+        - Tableau de bord
