--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -6,7 +6,7 @@ releases:
       email: apogy-dev@eclipse.org
     date:
       created: '2015-09-28'
-      metadataLastUpdated: '2019-01-31'
+      metadataLastUpdated: '2019-08-30'
     description:
       whatItDoes:
         en: 'The one-stop-shop solution for operating robots, satellites and beyond'
@@ -34,3 +34,10 @@ releases:
         - Espace
     languages:
       - Java
+    partners:
+      - adminCode: asc-csa
+        email: frederic.lestage@montreal.ca
+        name: Frédéric Lestage
+      - adminCode: partner-qc
+        email: frederic.lestage@montreal.ca
+        name: Frédéric Lestage
