--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ script:
 - yamale -s schemaAdmin.yaml _data/administrations
 - yamale -s schemaSoftware.yaml _data/software
 - yamale -s schemaStandard.yaml _data/standard
+- yamale -s schemaPartnership.yaml _data/partnership
 - npm run lint
 - yamllint -d configYamlLint.yml _data
 
