🤖 Commited by tommy.hudon@montreal.ca

--- a/_data/administrations/aboriginal.yml
+++ b/_data/administrations/aboriginal.yml
@@ -3,3 +3,8 @@
   name:
     en: Test (please remove)
     fr: Test (please remove)
+- code: asdf-sk
+  name:
+    en: asdf
+    fr: asdf
+  provinceCode: sk
