--- a/_data/software/lesk.yml
+++ b/_data/software/lesk.yml
@@ -16,9 +16,9 @@ homepageURL:
   fr: 'https://lesk.it'
 licences:
   - URL:
-      en: 'http://lesk.it/license.html'
-      fr: 'http://lesk.it/license.html'
-    spdxID: GPL-3.0
+      en: 'https://github.com/leskhq/Laravel-Enterprise-Starter-Kit/blob/master/LICENSE.md'
+      fr: 'https://github.com/leskhq/Laravel-Enterprise-Starter-Kit/blob/master/LICENSE.md'
+    spdxID: GPL-3.0-only
   - URL:
       en: 'http://lesk.it/license.html'
       fr: 'http://lesk.it/license.html'
