--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,8 @@ jdk:
 
 install:
 - bundle install
-- pip install --user html5validator
-- pip install --user yamale==1.10.1
+- pip install --user -r requirements.txt
 - npm install
-- pip install --user yamllint
 
 script:
 - bundle exec jekyll build
@@ -23,6 +21,5 @@ script:
 - yamale -s schemaPartnership.yaml _data/partnership
 - npm test
 - yamllint -d configYamlLint.yml _data
-
 
 sudo: false
