--- a/_data/standard/utf-8.yml
+++ b/_data/standard/utf-8.yml
@@ -35,9 +35,9 @@ administrations:
       created: '2018-01-23'
       metadataLastUpdated: '2018-11-15'
     references:
-      URL:
-        en: 'https://www.tbs-sct.gc.ca/pol/doc-eng.aspx?id=25875'
-        fr: 'https://www.tbs-sct.gc.ca/pol/doc-fra.aspx?id=25875'
+      - URL:
+          en: 'https://www.tbs-sct.gc.ca/pol/doc-eng.aspx?id=25875'
+          fr: 'https://www.tbs-sct.gc.ca/pol/doc-fra.aspx?id=25875'
         name:
           en: Standard on Web Interoperability
           fr: Norme sur l'interopérabilité du Web
@@ -51,21 +51,21 @@ administrations:
       created: '2018-01-23'
       metadataLastUpdated: '2018-11-15'
     references:
-      URL:
-        en: >-
+      - URL:
+          en: >-
             http://www.lac-bac.gc.ca/eng/services/government-information
             -resources/guidelines/Pages/guidelines-file-formats-transferring
             -information-resources-enduring-value.aspx
-        fr: >-
+          fr: >-
             http://www.lac-bac.gc.ca/fra/services/gestion-ressources
             -documentaires-gouvernement/lignes-directrices/Pages/lignes
             -directrices-formats-fichier-transferers-ressources-documentaires.
             aspx
-      name:
-        en: >-
+        name:
+          en: >-
             Guidelines on File Formats for Transferring Information Resources of
             Enduring Value
-        fr: >-
+          fr: >-
             Lignes directrices sur les formats de fichier à utiliser pour
             transférer des ressources documentaires
     status:
