Added Open Design

--- a/_data/forms/config-design.yml
+++ b/_data/forms/config-design.yml
@@ -1,9 +1,9 @@
 ---
 
-id: research
+id: design
 
 formGroups:
-  - preset: selectSoftware
+  - preset: selectDesign
   - preset: description
   - preset: category
   - preset: tags
