--- a/_data/standard/utf-8.yml
+++ b/_data/standard/utf-8.yml
@@ -51,9 +51,14 @@ administrations:
     references:
       - URL:
           en: >-
-            http://www.lac-bac.gc.ca/eng/services/government-information-resources/guidelines/Pages/guidelines-file-formats-transferring-information-resources-enduring-value.aspx
+            http://www.lac-bac.gc.ca/eng/services/government-information
+            -resources/guidelines/Pages/guidelines-file-formats-transferring
+            -information-resources-enduring-value.aspx
           fr: >-
-            http://www.lac-bac.gc.ca/fra/services/gestion-ressources-documentaires-gouvernement/lignes-directrices/Pages/lignes-directrices-formats-fichier-transferers-ressources-documentaires.aspx
+            http://www.lac-bac.gc.ca/fra/services/gestion-ressources
+            -documentaires-gouvernement/lignes-directrices/Pages/lignes
+            -directrices-formats-fichier-transferers-ressources-documentaires.
+            aspx
         name:
           en: >-
             Guidelines on File Formats for Transferring Information Resources of
