--- a/_data/software/jekyll.yml
+++ b/_data/software/jekyll.yml
@@ -25,7 +25,7 @@ administrations:
   - adminCode: tbs-sct
     uses:
       - contact:
-          email: sebastien.lemay@tbs-sct.gc.ca
+          email: sebastien.lemay@hrsdc-rhdcc.gc.ca
         date:
           started: '2018-01-23'
-          metadataLastUpdated: '2019-05-06'
+          metadataLastUpdated: '2019-12-09'
