--- a/_data/standard/utf-8.yml
+++ b/_data/standard/utf-8.yml
@@ -30,7 +30,7 @@ tags:
 administrations:
   - adminCode: tbs-sct
     contact:
-      email: sebastien.lemay@tbs-sct.gc.ca
+      email: dppn@tbs-sct.gc.ca
     date:
       created: '2018-01-23'
       metadataLastUpdated: '2018-11-15'
@@ -44,10 +44,10 @@ administrations:
     status: mandatory
   - adminCode: lac-bac
     contact:
-      email: sebastien.lemay@tbs-sct.gc.ca
+      email: sebastien.lemay@hrsdc-rhdcc.gc.ca
     date:
       created: '2018-01-23'
-      metadataLastUpdated: '2018-11-15'
+      metadataLastUpdated: '2019-12-09'
     references:
       - URL:
           en: 'https://www.bac-lac.gc.ca/eng/services/government-information-resources/guidelines/Pages/guidelines-file-formats-transferring-information-resources-enduring-value.aspx'
