🤖 Committed by d.gowans@cityssm.on.ca

--- a/_data/administrations/municipal.yml
+++ b/_data/administrations/municipal.yml
@@ -14,3 +14,8 @@
     en: City of Edmonton
     fr: Ville d'Edmonton
   provinceCode: ab
+- code: city-of-sault-ste-marie-on
+  name:
+    en: City of Sault Ste Marie
+    fr: Ville de Sault Sainte Marie
+  provinceCode: 'on'
